--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "roomiematch-server",
   "version": "1.0.0",
-  "description": "Backend for RoomieMatch application",
+  "description": "RoomieMatch backend server",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -10,16 +10,14 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-rate-limit": "^7.1.5",
-    "helmet": "^7.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.3",
-    "redis": "^4.6.12",
-    "validator": "^13.11.0"
+    "ioredis": "^5.3.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.3",
+    "@qdrant/js-client-rest": "^1.6.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "nodemon": "^2.0.22"
   }
 } 
