--- a/server/package.json
+++ b/server/package.json
@@ -8,16 +8,16 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "@qdrant/js-client-rest": "^1.6.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.3",
-    "@qdrant/js-client-rest": "^1.6.0"
+    "mongoose": "^7.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
   }
-} 
+}
