--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   server:
     build:
       context: .
-      dockerfile: server/Dockerfile
+      dockerfile: server/Dockerfile.dev
     ports:
       - "3000:3000"
     volumes:
@@ -19,11 +19,12 @@ services:
   client:
     build:
       context: .
-      dockerfile: client/Dockerfile
+      dockerfile: client/Dockerfile.dev
     ports:
       - "5173:5173"
     volumes:
       - ./client:/app
+      - /app/node_modules
     env_file:
       - ./client/.env
     environment:
