--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,7 +3,7 @@ FROM node:18
 WORKDIR /app
 COPY server/package*.json ./
 RUN npm ci --omit=dev
-COPY server ./
+COPY . .
 
 ENV NODE_ENV=production
 
