--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 services:
   server:
     build:
-      context: .
-      dockerfile: server/Dockerfile.dev
+      context: ./server
+      dockerfile: Dockerfile.dev
     ports:
       - "3000:3000"
     volumes:
@@ -18,8 +18,8 @@ services:
 
   client:
     build:
-      context: .
-      dockerfile: client/Dockerfile.dev
+      context: ./client
+      dockerfile: Dockerfile.dev
     ports:
       - "5173:5173"
     volumes:
@@ -35,4 +35,3 @@ services:
     image: redis:7
     ports:
       - "6379:6379"
-
