--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,8 +1,10 @@
 FROM node:18
 
 WORKDIR /app
-COPY server/package*.json ./
+
+COPY package*.json ./
 RUN npm ci --omit=dev
+
 COPY . .
 
 ENV NODE_ENV=production
