--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -36,7 +36,7 @@ steps:
       - '-c'
       - |
         # Replace “us-west1-a” with your cluster’s actual zone if different
-        gcloud container clusters get-credentials roomiematch \
+        gcloud container clusters get-credentials roommiematch \
           --zone us-west1-a
 
   - name: 'gcr.io/cloud-builders/kubectl'
