--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,7 +6,7 @@ steps:
     args:
       - build
       - -t
-      - us-west1-docker.pkg.dev/cs144-s25-aneeshbonthala/roommiemmatch/team28-client:v9
+      - us-west1-docker.pkg.dev/cs144-25s-aneeshbonthala/roommiematch/team28-client:v9
       - -f
       - client/Dockerfile
       - client
@@ -14,13 +14,13 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - push
-      - us-west1-docker.pkg.dev/cs144-s25-aneeshbonthala/roommiemmatch/team28-client:v9
+      - us-west1-docker.pkg.dev/cs144-25s-aneeshbonthala/roommiematch/team28-client:v9
 
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - build
       - -t
-      - us-west1-docker.pkg.dev/cs144-s25-aneeshbonthala/roommiemmatch/team28-server:v5
+      - us-west1-docker.pkg.dev/cs144-25s-aneeshbonthala/roommiematch/team28-server:v5
       - -f
       - server/Dockerfile
       - server
@@ -28,18 +28,23 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - push
-      - us-west1-docker.pkg.dev/cs144-s25-aneeshbonthala/roommiemmatch/team28-server:v5
+      - us-west1-docker.pkg.dev/cs144-25s-aneeshbonthala/roommiematch/team28-server:v5
+
+  - name: 'gcr.io/cloud-builders/gcloud'
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        # Replace “us-west1-a” with your cluster’s actual zone if different
+        gcloud container clusters get-credentials roommiematch \
+          --zone us-west1-a
 
   - name: 'gcr.io/cloud-builders/kubectl'
-    env:
-      - 'CLOUDSDK_PROJECT=cs144-s25-aneeshbonthala'
-      - 'CLOUDSDK_COMPUTE_ZONE=us-west1-a'
-      - 'CLOUDSDK_CONTAINER_CLUSTER=roommiemmatch'
     args:
       - apply
       - -f
       - k8s/
 
 images:
-  - us-west1-docker.pkg.dev/cs144-s25-aneeshbonthala/roommiemmatch/team28-client:v9
-  - us-west1-docker.pkg.dev/cs144-s25-aneeshbonthala/roommiemmatch/team28-server:v5
+  - us-west1-docker.pkg.dev/cs144-25s-aneeshbonthala/roommiematch/team28-client:v9
+  - us-west1-docker.pkg.dev/cs144-25s-aneeshbonthala/roommiematch/team28-server:v5
